[package]
name = "equilibrium-ci"
version = "0.1.0"
edition = "2021"
authors = ["Varun Tewari <contact@vtewari.com>"]


[dependencies]
axum = "0.6"
headers = "0.3"
tokio = { version = "1.0", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# database
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "mysql", "macros", "chrono"] }

# utils
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
nanoid = "0.4"

[profile.release]
opt-level = "s"
panic = "unwind"
strip = true
lto = true
